update instruction page

--- a/main/static/instruction_user.html
+++ b/main/static/instruction_user.html
@@ -1,114 +1,1 @@
-<html>
-<head>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css" rel="stylesheet" type="text/css" />
-</head>
-
-<body>
-  <div class="container">
-    <div class="section">
-      <!--
-      <div><h5>Overview</h5></div>
-      [[overview]]
-      -->
-      <div class="teal-text"><h5>Task Descriptions</h5></div>
-      <div class="row">
-  <div class="col">
-    <ul>
-      <li>There is a simple quiz for the first-time participants. It is mainly for preparing you for the task. After you login (or pass the quiz), you will see the chat interface. </li>
-      <li>
-        <div class="card">
-          <div class="card-image">
-            <img src="https://s3.amazonaws.com/crowdflower-make-cloud/images%2F1509395750642-user-ui-offline.png" alt="user-view"/>
-            <!-- <img src="img/user_ui.png" alt="ui"/> -->
-          </div>
-        </div>
-      </li>
-    </ul>
-    <ol>
-      <li><span class="red-text">IMPORTANT</span>
-        When you specify your initial preferences on the rental apartments, please use the pre-assigned
-        initial preferences in [1]. These could be adjusted later but the conversation should be
-        started based on [1].</li>
-      <li>Step 1: Review the chat history in area [2]. Determine what to do next [3].</li>
-      <li>Step 2:
-        <ul>
-          <li>You could take your turn to submit messages to continue the conversation.
-            As shown in the example, a proper turn of message is shown in the typing area [].
-            Then press enter to submit your message. </li>
-          <li>Or you can click "end" button [] to end the conversation, if,
-            <ol>
-              <li>you have achieved your goal - possible options found. </li>
-              <li>you have explored your options with the agent and the agent is not able to find an apartment meeting your criteria.</li>
-            </ol>
-          </li>
-        </ul>
-      </li>
-      <li>Step-3:<span class="red-text">IMPORTANT</span> Click [4] and obtain the confirmation code to complete the task via CrowdFlower interface. Otherwise, we cannot reward you.</li>
-    </ol>
-  </div>
-</div>
-
-      <div class="teal-text"><h5>How to do a good job?</h5></div>
-      <div class="row s12">
-  <table class="striped left-align" style="table-layout:fixed">
-    <thead>
-      <tr>
-          <th><span class="blue-text">Do's</span></th>
-          <th><span class="red-text">Dont's</span></th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Please make your message relevant, succint and useful for finding a task. English only.</td>
-        <td>Please do NOT involve uncommon slangs/typos, inconsequential conversations or any personal information. </td>
-      </tr>
-      <tr>
-        <td>Please understand your pre-defined preferences and use your commonsense.</td>
-        <td>Do NOT make out-of-scope requests.</td>
-      </tr>
-      <tr>
-        <td>Please understand the service is limited. </td>
-        <td>Please do not quit the task without exploring the service by the agent. </td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-
-      <div class="row left-align">
-        <div class="col s6">
-          <div><div class="collection-header"><b>A <span class="blue-text">Good</span> Example</b></div><div class="collection-item"><b class="blue-text">YOU</b>: Hi, I am looking for rental apartment. </div>
-<div class="collection-item"><b>agent</b>: Please tell me your preferences on location. </div>
-<div class="collection-item"><b class="blue-text">YOU</b>: So, preferably midtown Manhattan or Brooklyn Heights. <span class="blue-text">(Giving preferences.)</span></div>
-<div class="collection-item"><b>agent</b>: Good news. There are 20 apartments available in midtown Manhattan. </div>
-<div class="collection-item"><b class="blue-text">YOU</b>: OK. </div>
-<div class="collection-item"><b>agent</b>: What is your price range and how many bedrooms are you looking for? </div>
-<div class="collection-item"><b class="blue-text">YOU</b>: one-bed, between $1500 and $2900. prefer big windows. <span class="blue-text">(Answering with additional preferences.)</span></div>
-<div class="collection-item"><b>agent</b>: Sorry that we cannot search by "big windows". Now searching one-bedroom apartments for you between $1499 and $2999. </div>
-<div class="collection-item"><b class="blue-text">YOU</b>: Oh OK. Good to know. </div>
-<div class="collection-item"><b>agent</b>: Over 200 apartments in over 90 buildings. Do you have other preferences like subway lines or number of baths? </div>
-<div class="collection-item"><b class="blue-text">YOU</b>: An apartment near line 2 would be great. <span class="blue-text">(Answering the agent with more information.)</span></div>
-<div class="collection-item"><b>agent</b>: I think this one would be a good fit for you: 1600 BROADWAY, #3917 (Midtown, Manhattan) $2800; studio; 1 s, 592 square feet. </div>
-<div class="collection-item"><b class="blue-text">YOU</b>: Actually I think I might want something a little cheaper than that. <span class="blue-text">(Asking the the agent for the options to your preference.)</span></div>
-<div class="collection-item"><b>agent</b>: Okay, how about this one: 5 BRYANT PARK #2613 (Midtown, Manhattan) $2500; 1 beds; 1 bath </div>
-<div class="collection-item"><b class="blue-text">YOU</b>: That looks great, thanks! <span class="blue-text">(Accepting an apartment.)</span></div>
-<div class="collection-item"><b>agent</b>: You're welcome. Anything else I can help with? </div>
-<div class="collection-item"><b>user</b>: Not now. Thanks. Bye! <span class="blue-text">(END THE CONVERSATION)</span></div>
-</div>
-        </div>
-        <div class="col s6">
-          <div><div class="collection-header"><b>A <span class="red-text">Bad</span> Example</b></div><div class="collection-item"><b class="blue-text">YOU</b>: Hi, where are you from? <span class="red-text">(Avoid random chitchat.)</span></div>
-<div class="collection-item"><b>agent</b>: I'm from Michigan. How can I help you? </div>
-<div class="collection-item"><b class="blue-text">YOU</b>: I am looking for rental apartment. </div>
-<div class="collection-item"><b>agent</b>: Please tell me your preferences on location. </div>
-<div class="collection-item"><b class="blue-text">YOU</b>: I like buildings with glass window <span class="red-text">(Please try to respond to agent's question.)</span></div>
-<div class="collection-item"><b>agent</b>: What is your price range? </div>
-<div class="collection-item"><b class="blue-text">YOU</b>: less than $100 <span class="red-text">(Please make your request base on the commonsense)</span></div>
-<div class="collection-item"><b>agent</b>: There are no apartments in that price range but I can look for some other cheaper options. </div>
-<div class="collection-item"><b class="blue-text">YOU</b>: Never mind then, bye! <span class="red-text">(Please adjust search criteria to explore other options.)</span></div>
-</div>
-        </div>
-      </div>
-    </div>
-  </div>
-</body>
-</html>
+<html><head><meta content="text/html; charset=UTF-8" http-equiv="content-type"><style type="text/css">ol.lst-kix_v2ryhw4myhl9-5.start{counter-reset:lst-ctn-kix_v2ryhw4myhl9-5 0}ol.lst-kix_v2ryhw4myhl9-3.start{counter-reset:lst-ctn-kix_v2ryhw4myhl9-3 0}.lst-kix_v2ryhw4myhl9-5>li{counter-increment:lst-ctn-kix_v2ryhw4myhl9-5}ol.lst-kix_v2ryhw4myhl9-0.start{counter-reset:lst-ctn-kix_v2ryhw4myhl9-0 0}.lst-kix_v2ryhw4myhl9-8>li{counter-increment:lst-ctn-kix_v2ryhw4myhl9-8}.lst-kix_v2ryhw4myhl9-0>li{counter-increment:lst-ctn-kix_v2ryhw4myhl9-0}ol.lst-kix_v2ryhw4myhl9-1.start{counter-reset:lst-ctn-kix_v2ryhw4myhl9-1 0}ol.lst-kix_v2ryhw4myhl9-8.start{counter-reset:lst-ctn-kix_v2ryhw4myhl9-8 0}.lst-kix_v2ryhw4myhl9-8>li:before{content:"" counter(lst-ctn-kix_v2ryhw4myhl9-8,lower-roman) ". "}ol.lst-kix_v2ryhw4myhl9-6.start{counter-reset:lst-ctn-kix_v2ryhw4myhl9-6 0}.lst-kix_v2ryhw4myhl9-7>li:before{content:"" counter(lst-ctn-kix_v2ryhw4myhl9-7,lower-latin) ". "}.lst-kix_v2ryhw4myhl9-6>li:before{content:"" counter(lst-ctn-kix_v2ryhw4myhl9-6,decimal) ". "}.lst-kix_v2ryhw4myhl9-4>li{counter-increment:lst-ctn-kix_v2ryhw4myhl9-4}.lst-kix_v2ryhw4myhl9-4>li:before{content:"" counter(lst-ctn-kix_v2ryhw4myhl9-4,lower-latin) ". "}.lst-kix_v2ryhw4myhl9-3>li:before{content:"" counter(lst-ctn-kix_v2ryhw4myhl9-3,decimal) ". "}.lst-kix_v2ryhw4myhl9-5>li:before{content:"" counter(lst-ctn-kix_v2ryhw4myhl9-5,lower-roman) ". "}.lst-kix_v2ryhw4myhl9-1>li{counter-increment:lst-ctn-kix_v2ryhw4myhl9-1}.lst-kix_v2ryhw4myhl9-7>li{counter-increment:lst-ctn-kix_v2ryhw4myhl9-7}.lst-kix_v2ryhw4myhl9-1>li:before{content:"" counter(lst-ctn-kix_v2ryhw4myhl9-1,lower-latin) ". "}.lst-kix_v2ryhw4myhl9-2>li:before{content:"" counter(lst-ctn-kix_v2ryhw4myhl9-2,lower-roman) ". "}ol.lst-kix_v2ryhw4myhl9-4.start{counter-reset:lst-ctn-kix_v2ryhw4myhl9-4 0}ol.lst-kix_v2ryhw4myhl9-4{list-style-type:none}ol.lst-kix_v2ryhw4myhl9-5{list-style-type:none}ol.lst-kix_v2ryhw4myhl9-6{list-style-type:none}ol.lst-kix_v2ryhw4myhl9-7.start{counter-reset:lst-ctn-kix_v2ryhw4myhl9-7 0}.lst-kix_v2ryhw4myhl9-3>li{counter-increment:lst-ctn-kix_v2ryhw4myhl9-3}ol.lst-kix_v2ryhw4myhl9-7{list-style-type:none}ol.lst-kix_v2ryhw4myhl9-0{list-style-type:none}ol.lst-kix_v2ryhw4myhl9-1{list-style-type:none}ol.lst-kix_v2ryhw4myhl9-2{list-style-type:none}.lst-kix_v2ryhw4myhl9-6>li{counter-increment:lst-ctn-kix_v2ryhw4myhl9-6}.lst-kix_v2ryhw4myhl9-2>li{counter-increment:lst-ctn-kix_v2ryhw4myhl9-2}ol.lst-kix_v2ryhw4myhl9-3{list-style-type:none}.lst-kix_v2ryhw4myhl9-0>li:before{content:"" counter(lst-ctn-kix_v2ryhw4myhl9-0,decimal) ". "}ol.lst-kix_v2ryhw4myhl9-2.start{counter-reset:lst-ctn-kix_v2ryhw4myhl9-2 0}ol.lst-kix_v2ryhw4myhl9-8{list-style-type:none}ol{margin:0;padding:0}table td,table th{padding:0}.c1{color:#000000;font-weight:400;text-decoration:none;vertical-align:baseline;font-size:11pt;font-family:"Arial";font-style:normal}.c4{color:#000000;font-weight:400;text-decoration:none;vertical-align:baseline;font-size:20pt;font-family:"Arial";font-style:normal}.c0{padding-top:0pt;padding-bottom:0pt;line-height:1.15;orphans:2;widows:2;text-align:left}.c6{color:#000000;text-decoration:none;vertical-align:baseline;font-size:11pt;font-family:"Arial";font-style:normal}.c3{padding-top:0pt;padding-bottom:0pt;line-height:1.15;orphans:2;widows:2;text-align:center}.c7{padding-top:20pt;padding-bottom:6pt;line-height:1.15;page-break-after:avoid;text-align:left}.c5{background-color:#ffffff;max-width:468pt;padding:72pt 72pt 72pt 72pt}.c2{font-weight:700}.c8{height:11pt}.title{padding-top:0pt;color:#000000;font-size:26pt;padding-bottom:3pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}.subtitle{padding-top:0pt;color:#666666;font-size:15pt;padding-bottom:16pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}li{color:#000000;font-size:11pt;font-family:"Arial"}p{margin:0;color:#000000;font-size:11pt;font-family:"Arial"}h1{padding-top:20pt;color:#000000;font-size:20pt;padding-bottom:6pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h2{padding-top:18pt;color:#000000;font-size:16pt;padding-bottom:6pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h3{padding-top:16pt;color:#434343;font-size:14pt;padding-bottom:4pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h4{padding-top:14pt;color:#666666;font-size:12pt;padding-bottom:4pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h5{padding-top:12pt;color:#666666;font-size:11pt;padding-bottom:4pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;orphans:2;widows:2;text-align:left}h6{padding-top:12pt;color:#666666;font-size:11pt;padding-bottom:4pt;font-family:"Arial";line-height:1.15;page-break-after:avoid;font-style:italic;orphans:2;widows:2;text-align:left}</style></head><body class="c5"><h1 class="c7" id="h.w09on92c47fw"><span class="c4">Overview</span></h1><p class="c0"><span>In this interactive drawing game you will collaborate with a painter to draw the </span><span class="c2">layout </span><span class="c1">of a given image. The layout of an image includes objects in the image and their locations, and is represented by a set of rectangles and corresponding labels (see an example below). In this task you will act as the instructor and you are going to issue a drawing instruction to the painter, or answer painter&rsquo;s clarifying question about the previous instruction. </span></p><p class="c3"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 316.54px; height: 243.00px;"><img alt="" src="img/instructor_images/image4.png" style="width: 455.45px; height: 341.72px; margin-left: -138.91px; margin-top: -98.72px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></p><p class="c3"><span class="c1">An image and its layout (red rectangles and labels)</span></p><h1 class="c7" id="h.6c9qocqppscx"><span class="c4">Steps</span></h1><p class="c0"><span class="c2">Step 1, Login.</span><span class="c1">&nbsp;First you need to fill in ID and username in the login page. Currently we are only running a internal test so feel free to use any ID and username. Click start to enter the conversation.</span></p><p class="c3"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 356.50px; height: 297.65px;"><img alt="" src="img/instructor_images/image5.png" style="width: 356.50px; height: 297.65px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></p><p class="c0"><span class="c2">Step 2, Give Instructions, Answer Questions, or Finish the Conversation. </span><span>After you login to the application you will see an image layout reference on the left and a interactive drawing history on the right. Based on the conversation history you can take one of the three actions.</span></p><p class="c3 c8"><span class="c1"></span></p><p class="c0"><span class="c2">2.1 Given a instruction.</span><span class="c1">&nbsp;If the conversation history is empty or the latest message is a finished drawing, you need to compose a new instruction for the painter, by referring the image layout on the left[1]. Type your instruction in the textbox[2], and press Enter to submit it to the conversation. The painter will answer your instruction later so don&rsquo;t wait for it. After you submitting your instruction the job is done, click the submit button [4] to submit the task. </span></p><p class="c0"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 292.00px;"><img alt="" src="img/instructor_images/image2.png" style="width: 624.00px; height: 292.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></p><p class="c0"><span class="c2">2.2 Answer questions.</span><span class="c1">&nbsp;If the latest message is a clarifying question asked by the painter, as demonstrated in the following image, you need to compose an answer for the question. Type your answer in the textbox, and press Enter to submit it to the conversation. The instructor will answer your question later so don&rsquo;t wait for it. Your job is done and submit your task.</span></p><p class="c0"><span>&nbsp;</span><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 282.67px;"><img alt="" src="img/instructor_images/image3.png" style="width: 624.00px; height: 282.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></p><p class="c0"><span class="c2">2.3 Finish Conversation. </span><span class="c1">If you believe that last drawing has completed the layout of the given image, there is no need to give further instructions. In this case just click the &ldquo;FINISH DRAWING &amp; SUBMIT TASK&rdquo; button. It will send a special &ldquo;END&rdquo; token to end the conversation, and your task will also be submitted.</span></p><p class="c0"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 624.00px; height: 316.00px;"><img alt="" src="img/instructor_images/image1.png" style="width: 624.00px; height: 316.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></p><h1 class="c7" id="h.bcpefc90bdvy"><span class="c4">Thank you!</span></h1></body></html>
