--- a/main/static/cf_2Dshape_agent.html
+++ b/main/static/cf_2Dshape_agent.html
@@ -7,9 +7,11 @@
     <div class="section">
       <h5>Overview</h5>
       <blockquote>
-        In this interactive drawing game, you will act as a painter to draw on a canvas based on the instructions in the chat history (especially the latest messages). You will work other contributors and your contribution will be evaluated for bonus.
+        In this interactive drawing game, you will act as a painter to draw on a canvas based on the instructions in the chat history (especially the latest messages).
       </blockquote>
+      <div class="blue-text">Note: Do NOT wait for the responses from the instructors. Your contribution will be evaluated later for bonus. </div>
     </div>
+
     <div class="row">
       <div class="col s4">
         <div class="card">
@@ -53,9 +55,11 @@
         <li class="collection-item"><span class="red-text">IMPORTANT</span> After you complete the task, please copy the confirmation code to the crowdflower main task.</li>
       </ol>
     </div>
-    <div class="section">
+
+    <!-- <div class="section">
       <h5>Examples</h5>
-    </div>
+    </div> -->
+
     <div class="section">
       <h5>We thank you for your contributions. We hope to invite you back for more tasks.</h5>
     </div>
