--- a/main/static/cf_2Dshape_user.html
+++ b/main/static/cf_2Dshape_user.html
@@ -7,8 +7,9 @@
     <div class="section">
       <h5>Overview</h5>
       <blockquote>
-        In this interactive drawing game, you will act as an instructor, who describes an image via a chat interface to a painter. The painter should be able to follow your instruction to redraw (partially) the image. You will work with other contributors and your contribution will be evaluated for bonus.
+        In this interactive drawing game, you will act as an instructor, who describes an image via a chat interface to a painter. The painter should be able to follow your instruction to redraw (partially) the image. If the drawing is not completed, other instructors will continue to provide more instructions.
       </blockquote>
+      <div class="blue-text">Note: Do NOT wait for the responses from the painters. Your contribution will be evaluated later for bonus. </div>
     </div>
     <div class="row">
       <div class="col s4">
@@ -18,6 +19,7 @@
           <div class="card-action">Figure 1: Login in page</div>
         </div>
       </div>
+
       <div class="col s4">
         <div class="card">
           <div class="card-image">
@@ -43,9 +45,11 @@
         <li class="collection-item"><span class="red-text">IMPORTANT</span> After you complete the task, please copy the confirmation code to the crowdflower main task.</li>
       </ol>
     </div>
-    <div class="section">
+
+    <!-- <div class="section">
       <h5>Examples</h5>
-    </div>
+    </div> -->
+
     <div class="section">
       <h5>We thank you for your contributions. We hope to invite you back for more tasks.</h5>
     </div>
