--- a/main/static/cf_2Dshape_user.html
+++ b/main/static/cf_2Dshape_user.html
@@ -39,6 +39,7 @@
           <ul style="list-style-type:square">
             <li> - Give further instructions on how to draw the shapes with descriptions of the color and location. (press Enter to submit messages).</li>
             <li> - Answer the questions from the painter or help correct mistakes in the previous painting if necessary.</li>
+            <li> - If the painting is already complete, click <div class="chip">The drawing is complete</div>.</li>
           </ul>
         </li>
         <li class="collection-item">Click <div class="chip">next task</div> to start next ask or <div class="chip">submit</div> or submit the task.</li>
