--- a/main/static/cf_2Dshape_agent.html
+++ b/main/static/cf_2Dshape_agent.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="row">
-      <div class="col s4">
+      <div class="col s6">
         <div class="card">
           <div class="card-image">
             <img src="https://s3.amazonaws.com/crowdflower-make-cloud/images%2F1520974973199-Screen+Shot+2018-03-13+at+5.01.31+PM.png">
@@ -21,20 +21,15 @@
           <div class="card-action">Figure 1: Login in page</div>
         </div>
       </div>
-      <div class="col s4">
+    </div>
+
+    <div class="row">
+      <div class="col s12">
         <div class="card">
           <div class="card-image">
-            <img src="https://s3.amazonaws.com/crowdflower-make-cloud/images%2F1520974973199-Screen+Shot+2018-03-13+at+5.01.31+PM.png">
+            <img src="http://deep.cs.virginia.edu:8080/static/img/2Dshape/painter.gif">
           </div>
-          <div class="card-action">Figure 2: Task page</div>
-        </div>
-      </div>
-      <div class="col s4">
-        <div class="card">
-          <div class="card-image">
-            <img src="https://s3.amazonaws.com/crowdflower-make-cloud/images%2F1520974973199-Screen+Shot+2018-03-13+at+5.01.31+PM.png">
-          </div>
-          <div class="card-action">Figure 3: Drawing Took gif</div>
+          <div class="card-action">Figure 2: Drawing Took gif</div>
         </div>
       </div>
     </div>
