--- a/main/static/cf_COCO_agent.html
+++ b/main/static/cf_COCO_agent.html
@@ -7,7 +7,7 @@
     <div class="section">
       <h5>Overview</h5>
       <blockquote>
-        In this interactive drawing game, you will act as a painter to draw on a canvas based on the instructions in the chat history (especially the latest messages).
+        In this interactive drawing game, you will act as a painter to draw the a <b>layout</b> of an image on a canvas based on the instructions in the chat history (especially the latest messages). The <b>layout</b> of an image includes objects and their locations. All objects are represented by a set of rectangles (proportional to the size of the corresponding objects) with labels (see Figure 1).
       </blockquote>
       <div class="blue-text">Note: Do NOT wait for the responses from the instructors. Your contribution will be evaluated later for bonus. </div>
     </div>
@@ -18,18 +18,15 @@
           <div class="card-image">
             <img src="https://s3.amazonaws.com/crowdflower-make-cloud/images%2F1520974973199-Screen+Shot+2018-03-13+at+5.01.31+PM.png">
           </div>
-          <div class="card-action">Figure 1: Login in page</div>
+          <div class="card-action">Figure 0: Login in page</div>
         </div>
       </div>
-    </div>
-
-    <div class="row">
       <div class="col s8">
         <div class="card">
           <div class="card-image">
             <img src="http://deep.cs.virginia.edu:8080/static/img/2Dshape/painter.gif">
           </div>
-          <div class="card-action">Figure 2: Drawing Tool</div>
+          <div class="card-action">Figure 1: Drawing Tool</div>
         </div>
       </div>
     </div>
@@ -47,13 +44,10 @@
           </ul>
         </li>
         <li class="collection-item">Click <div class="chip">next task</div> to start next ask or <div class="chip">submit</div> or submit the task.</li>
-        <li class="collection-item"><span class="red-text">IMPORTANT</span> After you complete the task, please copy the confirmation code to the crowdflower main task.</li>
+        <li class="collection-item"><b>IMPORTANT</b> After you complete the task, please copy the confirmation code to the crowdflower main task.</li>
       </ol>
     </div>
 
-    <!-- <div class="section">
-      <h5>Examples</h5>
-    </div> -->
 
     <div class="section">
       <h5>We thank you for your contributions. We hope to invite you back for more tasks.</h5>
