update painter instruction images

--- a/main/static/cf_COCO_agent.html
+++ b/main/static/cf_COCO_agent.html
@@ -16,17 +16,27 @@
       <div class="col s4">
         <div class="card">
           <div class="card-image">
-            <img src="https://s3.amazonaws.com/crowdflower-make-cloud/images%2F1520974973199-Screen+Shot+2018-03-13+at+5.01.31+PM.png">
+            <img src="http://deep.cs.virginia.edu:8080/static/instructor-instruction/images/image2.jpg">
           </div>
-          <div class="card-action">Figure 0: Login in page</div>
+          <div class="card-action">Figure 1: Image</div>
         </div>
       </div>
+      <div class="col s4">
+        <div class="card">
+          <div class="card-image">
+            <img src="http://deep.cs.virginia.edu:8080/static/painter-instruction/images/image4.png">
+          </div>
+          <div class="card-action">Figure 2: Layout</div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
       <div class="col s8">
         <div class="card">
           <div class="card-image">
-            <img src="http://deep.cs.virginia.edu:8080/static/img/2Dshape/painter.gif">
+            <img src="http://deep.cs.virginia.edu:8080/static/painter-instruction/images/image7.gif">
           </div>
-          <div class="card-action">Figure 1: Drawing Tool</div>
+          <div class="card-action">Figure 3: Drawing Tool</div>
         </div>
       </div>
     </div>
