remove hardcoded image address

--- a/main/static/cf_2Dshape_agent.html
+++ b/main/static/cf_2Dshape_agent.html
@@ -27,7 +27,7 @@
       <div class="col s8">
         <div class="card">
           <div class="card-image">
-            <img src="http://deep.cs.virginia.edu:8080/static/img/2Dshape/painter.gif">
+            <img src="img/2Dshape/painter.gif">
           </div>
           <div class="card-action">Figure 2: Drawing Tool</div>
         </div>
