--- a/main/static/cf_2Dshape_user.html
+++ b/main/static/cf_2Dshape_user.html
@@ -25,7 +25,7 @@
       <div class="col s12">
         <div class="card">
           <div class="card-image">
-            <img src="http://deep.cs.virginia.edu:8080/static/img/2Dshape/instructor.gif">
+            <img src="img/2Dshape/instructor.gif">
           </div>
           <div class="card-action">Figure 2: Task page</div>
         </div>
