--- a/main/static/cf_2Dshape_user.html
+++ b/main/static/cf_2Dshape_user.html
@@ -25,7 +25,7 @@
       <div class="col s12">
         <div class="card">
           <div class="card-image">
-            <img src="img/2Dshape/instructor.gif">
+            <img src="https://s3.amazonaws.com/crowdflower-inst-imgs/2Dshape/instructor.gif">
           </div>
           <div class="card-action">Figure 2: Task page</div>
         </div>
