--- a/main/static/cf_COCO_agent.html
+++ b/main/static/cf_COCO_agent.html
@@ -16,7 +16,7 @@
       <div class="col s4">
         <div class="card">
           <div class="card-image">
-            <img src="img/COCO/coco_image.jpg">
+            <img src="https://s3.amazonaws.com/crowdflower-inst-imgs/COCO/coco_image.jpg">
           </div>
           <div class="card-action">Figure 1: Image</div>
         </div>
@@ -24,7 +24,7 @@
       <div class="col s4">
         <div class="card">
           <div class="card-image">
-            <img src="img/COCO/coco_layout.jpg">
+            <img src="https://s3.amazonaws.com/crowdflower-inst-imgs/COCO/coco_layout.jpg">
           </div>
           <div class="card-action">Figure 2: Layout</div>
         </div>
@@ -34,7 +34,7 @@
       <div class="col s8">
         <div class="card">
           <div class="card-image">
-            <img src="img/COCO/drawingtool.gif">
+            <img src="https://s3.amazonaws.com/crowdflower-inst-imgs/COCO/drawingtool.gif">
           </div>
           <div class="card-action">Figure 3: Drawing Tool</div>
         </div>
