--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css" media="screen,projection">
 </head>
 <body>
-  <a href="https://github.com/uvavision/chat-crowd/tree/website"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
+	<!-- <a href="https://github.com/uvavision/chat-crowd/tree/website"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a> -->
   <div class="section black lighten-1">
       <h3 class="header center orange-text"><i>chatcrowd</i>(ViL): A Dialog-based Platform <br>for Visual Layout Composition</h3>
     </div>
@@ -71,8 +71,8 @@
             <!-- <span class="card-title orange-text">2D shape task</span> -->
           </div>
           <div class="card-action">
-            <a class="btn orange" target="_blank" href="http://chatcrowd.net/login?role=user&task_id=test123&workerid=test123&username=Guest2&mode=2Dshape&debug=1">Play Instructor</a>
-            <a class="btn orange" target="_blank" href="http://chatcrowd.net/login?role=agent&task_id=test123&workerid=test123&username=Guest1&mode=2Dshape&debug=1">Play Painter</a>
+            <a class="btn orange" target="_blank" href="http://chatcrowd.net:8080/login?role=user&task_id=12445&workerid=test123&username=Guest2&mode=2Dshape&debug=1">Play Instructor</a>
+            <a class="btn orange" target="_blank" href="http://chatcrowd.net:8080/login?role=agent&task_id=12445&workerid=test123&username=Guest1&mode=2Dshape&debug=1">Play Painter</a>
           </div>
         </div>
       </div>
@@ -82,13 +82,13 @@
             <p>Task: COCO Layout</p>
           </div>
           <div class="card-image">
-            <img src="https://camo.githubusercontent.com/3908e3a68a56e332d9ad33a98464ff2f7567e520/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f63726f7764666c6f7765722d696e73742d696d67732f434f434f2f64726177696e67746f6f6c2e676966">
+		  <img src="https://camo.githubusercontent.com/3908e3a68a56e332d9ad33a98464ff2f7567e520/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f63726f7764666c6f7765722d696e73742d696d67732f434f434f2f64726177696e67746f6f6c2e676966">
             <!-- <span class="card-title orange-text">COCO task</span> -->
           </div>
 
           <div class="card-action">
-            <a class="btn orange" target="_blank" href="http://chatcrowd.net/login?role=user&task_id=test123&workerid=test123&username=Guest2&mode=COCO&debug=1">Play Instructor</a>
-            <a class="btn orange" target="_blank" href="http://chatcrowd.net/login?role=agent&task_id=test123&workerid=test123&username=Guest1&mode=COCO&debug=1">Play Painter</a>
+            <a class="btn orange" target="_blank" href="http://chatcrowd.net:8080/login?role=user&task_id=319714&workerid=test123&username=Guest2&mode=COCO&debug=1">Play Instructor</a>
+            <a class="btn orange" target="_blank" href="http://chatcrowd.net:8080/login?role=agent&task_id=319714&workerid=test123&username=Guest1&mode=COCO&debug=1">Play Painter</a>
           </div>
         </div>
       </div>
